--- a/가명정보.md
+++ b/가명정보.md
@@ -56,13 +56,13 @@ backgroundColor: #efe
 
 ## <!--fit--> 식별 위험성 검토 예시
 
-### - 고객ID : 나이/주소/성별 등을 조합시 식별 가능 조회임
+#### - 고객ID : 나이/주소/성별 등을 조합시 식별 가능 조회임
 
-### - 주소 : 동단위 이하 삭제 --> 부분삭제
+#### - 주소 : 동단위 이하 삭제 --> 부분삭제
 
-### - 금액 : 크거나 작은 금액일 경우 식별 가능 --> 금액 이상/이하로 변경, 범주화
+#### - 금액 : 크거나 작은 금액일 경우 식별 가능 --> 금액 이상/이하로 변경, 범주화
 
-### - 나이 : 분석 대상의 나이가 분포상 소수 일 경우 특정 나이대 이상/이하로 변경, 상하단 코딩 적용
+#### - 나이 : 분석 대상의 나이가 분포상 소수 일 경우 특정 나이대 이상/이하로 변경, 상하단 코딩 적용
 
 ---
 
@@ -110,3 +110,95 @@ backgroundColor: #efe
 ![bg 110%][키결합1]
 
 ![bg 90%][키결합2]
+
+---
+
+[결합신청대상]: ./assets/신청대상.png
+
+![bg right 110%][결합신청대상]
+
+#### 결합 및 추가 가명처리
+
+##### 결합 단계별 순서
+
+  1. 결합키 생성
+  1. 모의 결합
+  1. 결합률 확인
+  1. 가명정보 추출
+  1. 가명처리 및 검토
+  1. 결합
+  1. 추가처리 및 분석
+
+  ---
+
+##### 1. 결합키 생성
+
+```
+- 결합키 생성 항목
+- 인코딩 방식
+- 결합키 생성 알고리즘
+```
+
+[결합키생성]: ./assets/1.결합키생성.png
+
+![bg right 90%][결합키생성]
+
+---
+
+##### 2. 모의 결합
+
+[결합키생성예시]: ./assets/2.결합키생성예시.png
+
+![bg right 90%][결합키생성예시]
+
+---
+
+##### 3. 결합률 확인
+
+[결합률확인]: ./assets/3.결합률확인.png
+![bg right 90%][결합률확인]
+
+---
+
+#### 4. 가명정보 추출
+
+[가명정보추출]: ./assets/4.가명정보추출.png
+
+```
+- 정보수가 너무 적은 경우 : 재식별 위험/불이익 발생 가능성
+- 대규모 데이터 경우 : 처리/전송 부담 
+```
+
+![bg right 90%][가명정보추출]
+
+---
+
+#### 5. 가명처리 및 검토
+
+[가명처리검토]: ./assets/5.가명처리검토.png
+
+```
+결합신청자 : 대상 정보 가명처리 후 전송
+  - 결함키관리기관 제공한 일련번호 확인
+  - 대상정보를 결함전문기관에 전송
+```
+
+![bg right 100%][가명처리검토]
+
+---
+
+#### 6. 결합
+
+[결합]: ./assets/6.결합.png
+
+![bg 60%][결합]
+
+---
+
+#### 7. 추가처리 및 분석
+
+```
+* 결합정보의 식별 위험성 확인 및 보완 처리
+* 재식별 가능성 등 추가 가명처리가 불필요시 반출신청
+* 결합전문기관 내 추가 가명처리 공간에서 결합정보 분석 가능, 지원 요청
+```
