--- a/가명정보.md
+++ b/가명정보.md
@@ -29,7 +29,7 @@ backgroundColor: #efe
 
 <!-- ![bg](./assets/gradient.jpg) -->
 
-## <!--fit--> 식별 위험성 검토 항목
+## **식별 위험성 검토 항목**
 
 ### 1. 데이터
 
@@ -54,7 +54,7 @@ backgroundColor: #efe
 <!-- This is presenter note. You can write down notes through HTML comment. -->
 ---
 
-## <!--fit--> 식별 위험성 검토 예시
+## **식별 위험성 검토 예시**
 
 #### - 고객ID : 나이/주소/성별 등을 조합시 식별 가능 조회임
 
@@ -66,7 +66,7 @@ backgroundColor: #efe
 
 ---
 
-#### 가명처리 예시
+## **가명처리 예시**
 
 [def1]: ./assets/가명처리1.png
 [def2]: ./assets/가명처리2.png
@@ -83,7 +83,7 @@ backgroundColor: #efe
 
 ---
 
-#### 내부 결합 절차 및 예시
+## **내부 결합 절차 및 예시**
 
 [내부1]: ./assets/내부결합1.png
 [내부2]: ./assets/내부결합2.png
@@ -93,7 +93,7 @@ backgroundColor: #efe
 
 ---
 
-#### 결합 신청 절차
+## **결합 신청 절차**
 
 [결합신청절차]: ./assets/결합신청절차.png
 
@@ -101,7 +101,7 @@ backgroundColor: #efe
 
 ---
 
-#### 가명정보 결합 / 반출 업무
+## **가명정보 결합 / 반출 업무**
 
 [키결합1]: ./assets/키결합1.png
 
@@ -117,9 +117,9 @@ backgroundColor: #efe
 
 ![bg right 110%][결합신청대상]
 
-#### 결합 및 추가 가명처리
+## **결합 및 추가 가명처리**
 
-##### 결합 단계별 순서
+#### 결합 단계별 순서
 
   1. 결합키 생성
   1. 모의 결합
